--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-preact": "^0.454.0",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
+    "next-themes": "^0.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
